<resources>
    <string name="app_name">Milo\'s App</string>

    <!-- Navigation Menu Titles -->
    <string name="nav_login_title">Login to Firebase</string>
    <string name="nav_find_pet_title">Find breed image</string>
    <string name="nav_settings_title">Settings</string>

    <!-- Menu Titles -->
    <string name="add_pet">Add Pet</string>
    <string name="save_pet">Save Pet</string>
    <string name="edit_pet">Edit Pet</string>
    <string name="update_pet">Update Pet</string>
    <string name="delete_pet">Delete Pet</string>

    <!-- Activity Titles -->
    <string name="list_activity_title">Pets List</string>
    <string name="detail_activity_title">Pet Details</string>
    <string name="addedit_activity_title_add">Add a Pet</string>
    <string name="addedit_activity_title_edit">Edit Pet</string>
    <string name="settings_activity_title">Settings</string>

    <!-- AddEditActivity Labels, Hint, Unit -->
    <string name="label_name">Name:</string>
    <string name="label_breed">Breed:</string>
    <string name="label_gender">Gender:</string>
    <string name="label_date_birth">Birth Date:</string>
    <string name="label_weight">Weight:</string>
    <string name="label_owner">Owner:</string>
    <string name="label_address">Address:</string>
    <string name="label_contact_no">Contact No:</string>
    <string name="name_hint">(Required)</string>
    <string name="weight_unit_kg">kg</string>
    <string name="weight_unit_lb">lb</string>

    <!-- Spinner Labels -->
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>

    <!-- Empty Name Message -->
    <string name="empty_required_field">Name, Birth Date required</string>

    <!-- Content Descriptions-->
    <string name="image_description">Image of the cute buddy</string>
    <string name="img_date_picker_description">Pick birth date</string>
    <string name="navigation_drawer_open">navigation drawer open</string>
    <string name="navigation_drawer_close">navigation drawer close</string>

    <!-- Pet Details Label -->
    <string name="name_label">Name:</string>
    <string name="breed_label">Breed:</string>
    <string name="gender_label">Gender:</string>
    <string name="birth_date_label">Birth Date:</string>
    <string name="weight_label">Weight:</string>
    <string name="owner_label">Owner:</string>
    <string name="address_label">Address:</string>
    <string name="contact_no_label">Contact No:</string>
    <string name="edit_img_description">Image of pet at editor</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_image">Choose image</string>
    <string name="img_take_photo_description">Take photo</string>
    <string name="img_choose_image_description">Choose image</string>


    <!-- Settings -->
    <string name="units_key">units.key</string>
    <string name="units_label">Weight Units</string>
    <string name="unit_label_kg">Kilogram</string>
    <string name="unit_label_lb">Pound</string>
    <string name="unit_kg">kg</string>
    <string name="unit_lb">lb</string>
</resources>
