<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/name_label"
            style="@style/DetailsLabel"
            android:text="@string/name_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/breed_label"
            style="@style/DetailsLabel"
            android:text="@string/breed_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />

        <TextView
            android:id="@+id/gender_label"
            style="@style/DetailsLabel"
            android:text="@string/gender_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_breed" />

        <TextView
            android:id="@+id/birth_date_label"
            style="@style/DetailsLabel"
            android:text="@string/birth_date_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_gender" />

        <TextView
            android:id="@+id/weight_label"
            style="@style/DetailsLabel"
            android:text="@string/weight_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_birth_date" />

        <TextView
            android:id="@+id/owner_label"
            style="@style/DetailsLabel"
            android:text="@string/owner_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_weight" />

        <TextView
            android:id="@+id/address_label"
            style="@style/DetailsLabel"
            android:text="@string/address_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_owner" />

        <TextView
            android:id="@+id/contact_no_label"
            style="@style/DetailsLabel"
            android:text="@string/contact_no_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_address" />

        <TextView
            android:id="@+id/tv_detail_name"
            style="@style/Details"
            app:layout_constraintBaseline_toBaselineOf="@+id/name_label"
            app:layout_constraintLeft_toLeftOf="@+id/detail_guideline"
            tools:text="Name" />

        <TextView
            android:id="@+id/tv_detail_breed"
            style="@style/Details"
            app:layout_constraintBaseline_toBaselineOf="@+id/breed_label"
            app:layout_constraintLeft_toLeftOf="@+id/detail_guideline"
            tools:text="Breed" />

        <TextView
            android:id="@+id/tv_detail_gender"
            style="@style/Details"
            app:layout_constraintBaseline_toBaselineOf="@+id/gender_label"
            app:layout_constraintLeft_toLeftOf="@+id/detail_guideline"
            tools:text="Gender" />

        <TextView
            android:id="@+id/tv_detail_birth_date"
            style="@style/Details"
            app:layout_constraintBaseline_toBaselineOf="@+id/birth_date_label"
            app:layout_constraintLeft_toLeftOf="@+id/detail_guideline"
            tools:text="Birth Date" />

        <TextView
            android:id="@+id/tv_detail_weight"
            style="@style/Details"
            app:layout_constraintBaseline_toBaselineOf="@+id/weight_label"
            app:layout_constraintLeft_toLeftOf="@+id/detail_guideline"
            tools:text="Weight" />

        <TextView
            android:id="@+id/tv_detail_owner"
            style="@style/Details"
            app:layout_constraintBaseline_toBaselineOf="@+id/owner_label"
            app:layout_constraintLeft_toLeftOf="@+id/detail_guideline"
            tools:text="Owner" />

        <TextView
            android:id="@+id/tv_detail_address"
            style="@style/Details"
            app:layout_constraintBaseline_toBaselineOf="@+id/address_label"
            app:layout_constraintLeft_toLeftOf="@+id/detail_guideline"
            tools:text="Long Address Long Address" />

        <TextView
            android:id="@+id/tv_detail_contact_no"
            style="@style/Details"
            app:layout_constraintBaseline_toBaselineOf="@+id/contact_no_label"
            app:layout_constraintLeft_toLeftOf="@+id/detail_guideline"
            tools:text="Gender" />

        <android.support.constraint.Guideline
            android:id="@+id/detail_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/detail_guideline_start" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>